common/force-app/main/default/objects/Comment__c/fields/Answer_comments__c.field-meta.xml
<CustomField>
    <fullName>Answer_comments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment Responded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments1</relationshipName>
    <type>Lookup</type>
</CustomField>