common/force-app/main/default/objects/Comment__c/fields/Commented_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Commented_By_Name__c</fullName>
    <formula>Answer_comments__r.FirstName    + &apos; &apos; +  Answer_comments__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commented Responded By Name</label>
    <type>Text</type>
</CustomField>