common/force-app/main/default/objects/Comment__c/fields/Deal_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Page_Link__c</fullName>
    <formula>Product__r.Deal_Page_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Page Link</label>
    <type>Text</type>
</CustomField>