common/force-app/main/default/objects/Comment__c/fields/Notify_Investor__c.field-meta.xml
<CustomField>
    <fullName>Notify_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>a notification has been sent out to the investor on response to the comment. Please do not check this box manually</inlineHelpText>
    <label>Notified Investor</label>
    <type>Checkbox</type>
</CustomField>