common/force-app/main/default/objects/Comment__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Comment Posted Date</label>
    <type>Date</type>
</CustomField>