common/force-app/main/default/objects/Comment__c/fields/Reponse_Date__c.field-meta.xml
<CustomField>
    <fullName>Reponse_Date__c</fullName>
    <label>Responded Date</label>
    <type>Date</type>
</CustomField>