common/force-app/main/default/objects/Comment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved__c</columns>
    <columns>comments__c</columns>
    <columns>Response__c</columns>
    <columns>Raise__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>